2006-01-06  Benhur Stein <benhur@inf.ufsm.br>
	* ReductionFilter/ReduceEntityType.m,
	  SpaceTimeViewer/DrawView+Drawing.m,
	  SpaceTimeViewer/DrawView+Finding.m, StatViewer/StatViewer.m,
	  StorageController/Encapsulate.m: reverse object enumeration, so that
	  they are in the right drawing order

2006-01-06  Benhur Stein <benhur@inf.ufsm.br>
	* ContainerFilter/ContainerSelector.m,
	  EntityTypeFilter/EntityTypeSelector.m, General/Association.m,
	  General/HierarchyBrowser.m, General/PSortedArray.m,
	  General/PajeEntityInspector.m, General/Protocols.h,
	  OrderFilter/Order.m, Paje/PajeController.m, PajeSimulator/PajeSimul.m,
	  SpaceTimeViewer/STLayoutEditor.m, SpaceTimeViewer/Shape.m: remove
	  compiler warnings

2005-12-26  Benhur Stein <benhur@inf.ufsm.br>
	* StatViewer/StatViewer.[hm]: correctly declare cell; remove .h
          inclusion

2005-12-26  Benhur Stein <benhur@inf.ufsm.br>
	* General/CondensedEntitiesArray.[hm]: added totalDuration variable
          and access methods
	* StorageController/AggregateState.m: -exclusiveDuration: add method
	* General/NSString+Additions.[hm]: added string drawing methods from
          PieCell
	* PajeSimulator/SimulContainer.m: added a FIXME comment to stopWithEvent
	* StatViewer/GNUmakefile: removed StatValue class
	* StatViewer/StatValue.[hm]: removed files
	* StatViewer/PieCell.[hm]: major change in pie drawing code
	* StatViewer/StatArray.[hm]: mostly rewritten
	* StatViewer/StatViewer.gorm: modified interface
	* StatViewer/StatViewer.[hm]: reflect interface changes

2005-12-26  Benhur Stein <benhur@inf.ufsm.br>
	* PajeSimulator/PajeSimul.m: -inputEntity: check for unknown event

2005-10-14  Benhur Stein <benhur@inf.ufsm.br>
	* PajeSimulator/UserState.m: encode/decode new variables

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
        * PajeEventDecoder/PajeEventDecoder.m: forgotten on previous commit

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>