@@ -34,7 +34,6 @@
 #include <Foundation/Foundation.h>
 #include "../General/PSortedArray.h"
 #include "BusyDate.h"
-#include "../General/Protocols.h"
 #include "../General/PajeContainer.h"
 
 @interface BusyArray : PSortedArray
@@ -56,11 +55,16 @@
 
 - (void)dealloc;
 
-- (void)addObject:(id <PajeEntity>)obj;
+- (void)addEntity:(PajeEntity *)entity;
 
 - (NSEnumerator *)objectEnumeratorOfClass:(Class)c;
 - (NSEnumerator *)objectEnumeratorOfClass:(Class)c
-                                 fromTime:(NSDate *)t1 toTime:(NSDate *)t2;
+                                 fromTime:(NSDate *)t1
+                                   toTime:(NSDate *)t2;
+- (NSEnumerator *)reverseObjectEnumeratorOfClass:(Class)c;
+- (NSEnumerator *)reverseObjectEnumeratorOfClass:(Class)c
+                                        fromTime:(NSDate *)t1
+                                          toTime:(NSDate *)t2;
 
 - (PajeContainer *)container;
 - (PajeEntityType *)entityType;
