@@ -26,43 +26,49 @@
 {
     BusyArray *array;
     Class class;
-    unsigned index;
-    unsigned lastIndex;
+    int index;
+    int lastIndex;
 }
 
-- (id)initWithArray:(BusyArray *)a entityClass:(Class)c;
-- (id)initWithArray:(BusyArray *)a entityClass:(Class)c
-         firstIndex:(unsigned)i1 lastIndex:(unsigned)i2;
+- (id)initWithArray:(BusyArray *)a
+	entityClass:(Class)c;
+- (id)initWithArray:(BusyArray *)a
+	entityClass:(Class)c
+         firstIndex:(unsigned)i1
+	  lastIndex:(unsigned)i2;
 - (void)dealloc;
 - (id)nextObject;
 @end
 
 @implementation BusyArrayEnumerator
-- (id)initWithArray:(BusyArray *)a entityClass:(Class)c
+- (id)initWithArray:(BusyArray *)a
+	entityClass:(Class)c
 {
-    NSParameterAssert(a);
+    NSParameterAssert(a != nil);
     self = [super init];
-    if (self) {
+    if (self != nil) {
         array = [a retain];
         class = c;
         index = 0;
+        // last element of array doesn't generate an entity
         lastIndex = [array count] - 2;
     }
     return self;
 }
 
-- (id)initWithArray:(BusyArray *)a entityClass:(Class)c
-         firstIndex:(unsigned)i1 lastIndex:(unsigned)i2
+- (id)initWithArray:(BusyArray *)a
+	entityClass:(Class)c
+         firstIndex:(unsigned)i1
+	  lastIndex:(unsigned)i2
 {
-    NSParameterAssert(a);
-    self = [super init];
-    if (self) {
-        array = [a retain];
-        class = c;
-        index = i1;
-        lastIndex = [array count] - 2;
-        if (i2 < lastIndex)
+    self = [self initWithArray:a entityClass:c];
+    if (self != nil) {
+        if (i1 > index) {
+            index = i1;
+        }
+        if (i2 < lastIndex) {
             lastIndex = i2;
+	}
     }
     return self;
 }
@@ -77,7 +83,6 @@
 {
     id entity;
 
-    // last element of array doesn't generate an entity
     if (index > lastIndex) {
         return nil;
     }
@@ -89,18 +94,44 @@
 }
 @end
 
+@interface BusyArrayReverseEnumerator : BusyArrayEnumerator
+@end
+
+@implementation BusyArrayReverseEnumerator
+- (id)nextObject
+{
+    id entity;
+
+    if (index > lastIndex) {
+        return nil;
+    }
+
+    entity = [class entityWithArray:array index:lastIndex];
+    lastIndex--;
+
+    return entity;
+}
+@end
+
+
 
 
 @implementation BusyArray
-- (id)initWithEntityType:(PajeEntityType *)et container:(PajeContainer *)cont
-               startTime:(NSDate *)startTime endTime:(NSDate *)endTime
+- (id)initWithEntityType:(PajeEntityType *)et
+               container:(PajeContainer *)cont
+               startTime:(NSDate *)startTime
+                 endTime:(NSDate *)endTime
 {
     self = [super initWithSelector:@selector(time)];
-    if (self) {
+    if (self != nil) {
         container = [cont retain];
         entityType = et; // not retained
-        [array insertObject:[BusyDate dateWithDate:startTime objects:[NSMutableArray array]] atIndex:0];
-        [array insertObject:[BusyDate dateWithDate:endTime objects:[NSMutableArray array]] atIndex:1];
+        [array insertObject:[BusyDate dateWithDate:startTime
+                                           objects:[NSMutableArray array]]
+                    atIndex:0];
+        [array insertObject:[BusyDate dateWithDate:endTime
+                                           objects:[NSMutableArray array]]
+                    atIndex:1];
     }
     return self;
 }
@@ -112,16 +143,18 @@
               enumerator:(NSEnumerator *)enumerator
               nameFilter:(NSSet *)filter
 {
-    self = [self initWithEntityType:et container:cont
-                          startTime:startTime endTime:endTime];
+    self = [self initWithEntityType:et
+                          container:cont
+                          startTime:startTime
+                            endTime:endTime];
     if (self) {
-        id <PajeEntity>obj;
-        while ((obj = [enumerator nextObject]) != nil) {
-            if (![filter containsObject:[obj name]]) {
-                [self addObject:obj];
+        PajeEntity *entity;
+        while ((entity = [enumerator nextObject]) != nil) {
+            if (![filter containsObject:[entity name]]) {
+                [self addEntity:entity];
             }
         }
-   }
+    }
     return self;
 }
 
@@ -151,7 +184,7 @@
     return [[array lastObject] time];
 }
 
-- (void)addObject:(id <PajeEntity>)entity
+- (void)addEntity:(PajeEntity *)entity;
 {
     id startTime = [entity startTime];
     id endTime = [entity endTime];
@@ -187,18 +220,44 @@
 
 - (NSEnumerator *)objectEnumeratorOfClass:(Class)c
 {
-    return [[(BusyArrayEnumerator *)[BusyArrayEnumerator alloc] initWithArray:self entityClass:c] autorelease];
+    return [[[BusyArrayEnumerator alloc] initWithArray:self
+                                           entityClass:c] autorelease];
 }
 
 - (NSEnumerator *)objectEnumeratorOfClass:(Class)c
-                                 fromTime:(NSDate *)t1 toTime:(NSDate *)t2
+                                 fromTime:(NSDate *)t1
+                                   toTime:(NSDate *)t2
 {
     BusyArrayEnumerator *enumerator;
     unsigned i1, i2;
     i1 = [self indexOfLastObjectNotAfterValue:t1];
     i2 = [self indexOfFirstObjectNotBeforeValue:t2];
-    enumerator = [[BusyArrayEnumerator alloc] initWithArray:self entityClass:c
-                                                 firstIndex:i1 lastIndex:i2];
+    enumerator = [[BusyArrayEnumerator alloc] initWithArray:self
+                                                entityClass:c
+                                                 firstIndex:i1
+                                                  lastIndex:i2];
+    return [enumerator autorelease];
+}
+
+
+- (NSEnumerator *)reverseObjectEnumeratorOfClass:(Class)c
+{
+    return [[[BusyArrayReverseEnumerator alloc] initWithArray:self
+                                                  entityClass:c] autorelease];
+}
+
+- (NSEnumerator *)reverseObjectEnumeratorOfClass:(Class)c
+                                        fromTime:(NSDate *)t1
+                                          toTime:(NSDate *)t2
+{
+    BusyArrayEnumerator *enumerator;
+    unsigned i1, i2;
+    i1 = [self indexOfLastObjectNotAfterValue:t1];
+    i2 = [self indexOfFirstObjectNotBeforeValue:t2];
+    enumerator = [[BusyArrayReverseEnumerator alloc] initWithArray:self
+                                                       entityClass:c
+                                                        firstIndex:i1
+                                                         lastIndex:i2];
     return [enumerator autorelease];
 }
 
